Version 0.8.0
=============
* Distribution of mouse entered and mouse exited events have been fixed.
  A mouse entered event is distributed to a widget when the mouse enters
  a widget and a mouse exited event is distributed to a widget as soon
  as the mouse leaves the widget.
* OpenGL true type font has been added as an add on. The font uses the OGLFT font
  library, http://oglft.sourceforge.net/.
* A bug has been fixed where a segfault could occur when a drop down widget
  was deleted.
* Button now has configurable spacing.
	
Version 0.7.1
=============
* A problem with make dist has been fixed to include the source of the
  addons, the HGE support and the OpenLayer support. 
	
Version 0.7.0
=============
* Focus has been changed to be applied synchronously, hence 
  FocusHandler::applyChanges has been removed.
* Mouse coordinates in mouse events have been changed so they always are relative 
  to the widget receiving the event and not as before relative to the source widget.
* The distribution of key events has changed. Key events are now distributed 
  like mouse events, events are first distributed to the source widget followed 
  by the parents of the source widget.
* HGE support has been added.
* OpenLayer support has been added.
* A focus listener has been added. Due to the addition of a focus listener
  the functions Widget::focusLost and Widget::focusGained have been removed.
  To receive widget focus events a widget should now inherit from FocusListener
  and listen for events from itself.
* Many small bug fixes.

Version 0.6.1
=============
* The functions add, remove and clear have been removed from Widget.
  They now reside protected in basic container.
* Inclusion of OpenGL headers has been fixed on Mac.

Version 0.6.0
=============
* A lot of function definitions from BasicContainer have been moved down to
  Widget, but Widget doesn't provide any useful implementations of these
  functions. Useful implementations still reside in BasicContainer. 